--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 $primary: #FFCC00;
 $secondary: #31404B;
 $light: #FFFFFF;
-$dark: #1E2024;
+$dark: #154B52;
 
 $font-family-sans-serif: 'Montserrat', sans-serif;
 
