Some changes. Including deleting sections and adding colors

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 /******* Bootstrap Theming ********/
 
-$primary: #FFCC00;
+$primary: #0099DD;
 $secondary: #31404B;
 $light: #FFFFFF;
 $dark: #154B52;
