--- a/css/style.css
+++ b/css/style.css
@@ -3789,7 +3789,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #FFCC00;
+  background-color: #0099DD;
   border: 0;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
@@ -9264,7 +9264,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #FFCC00 !important;
+  color: #0099DD !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -9516,7 +9516,7 @@ h6,
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
   color: #1E2024;
-  background: #FFCC00;
+  background: #0099DD;
 }
 
 @media (max-width: 991.98px) {
