--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #9A9DA2;
+  color: #000;
   text-align: left;
   background-color: #EDEFF4;
 }
